<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="@string/app_titel"
    tools:context=".MainActivity">


<item android:id="@+id/benachrichtigung"
    android:checkable="true"
    android:title="@string/app_settingsLabel_benachrichtigung" />


    <item android:id="@+id/ton"
        android:checkable="true"
        android:visible="true"
        android:title="@string/app_settingsLabel_ton" />

    <item android:id="@+id/vibration"
        android:checkable="true"
        android:visible="true"
        android:title="@string/app_settingsLabel_vibration" />

    <item android:id="@+id/licht"
        android:checkable="true"
        android:visible="true"
        android:title="@string/app_settingsLabel_licht" />

</menu>
